fix: adjust z-index of favorite icon

--- a/src/cui/modules/CuiMealCard/components/CuiMealFavorite/CuiMealFavorite.scss
+++ b/src/cui/modules/CuiMealCard/components/CuiMealFavorite/CuiMealFavorite.scss
@@ -8,6 +8,7 @@
    display: block;
    width: 24px;
    height: 24px;
+   z-index: 1;
 }
 
 .cui-meal-favorite-icon {
